--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8" />
-  <title>Vibecoder AI Lab – AI 전환 코치 Jake</title>
+  <title>Vibecoder AI Lab – AI 전환 코치 JAY</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="Vibecoder AI Lab – AI 전환 코치 Jake의 업무 자동화 · 파이썬 · AI 전환 실험실입니다." />
+  <meta name="description" content="Vibecoder AI Lab – AI 전환 코치 JAY의 업무 자동화 · 파이썬 · AI 전환 실험실입니다." />
   <style>
     /* ===== 기본 ===== */
     * {
@@ -377,7 +377,7 @@
     <!-- 사이드바 -->
     <aside class="sidebar">
       <div class="profile-avatar">J</div>
-      <div class="profile-name">Jake</div>
+      <div class="profile-name">JAY</div>
       <div class="profile-role">AI 전환 코치 · 업무 자동화 빌더</div>
       <p class="profile-bio">
         파이썬과 AI로 반복 업무를 재설계하고,<br />
@@ -409,7 +409,7 @@
       <section id="hero" class="hero">
         <div class="hero-inner">
           <div>
-            <div class="hero-title">AI 전환 코치 · Vibecoder Jake</div>
+            <div class="hero-title">AI 전환 코치 · Vibecoder JAY</div>
             <div class="hero-subtitle">업무를 다시 설계하는 실험실</div>
             <p class="hero-text">
               이 페이지는 반복적인 행정·사무 업무를 파이썬과 AI로 자동화하고,
@@ -587,7 +587,7 @@
           아이디어나 협업 제안이 있다면 메일로 연락 주세요.
         </p>
         <p style="font-size:14px; color:#4b5563;">
-          이메일: <strong>your-email@example.com</strong><br />
+          이메일: <strong>jake97219@naver.com</strong><br />
           (GitHub Pages에 올릴 때는 위 주소만 실제 사용하는 메일로 교체하면 됩니다.)
         </p>
       </section>
@@ -595,7 +595,7 @@
   </main>
 
   <footer>
-    © <span id="year"></span> Vibecoder AI Lab · Jake
+    © <span id="year"></span> Vibecoder AI Lab · JAY
   </footer>
 
   <script>
